WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275556
[view-transitions] Context menu is broken when view transition is running
https://bugs.webkit.org/show_bug.cgi?id=275556
Summary
[view-transitions] Context menu is broken when view transition is running
Tim Nguyen (:ntim)
Reported
2024-06-16 22:19:06 PDT
STR: - Open
https://bugs.webkit.org/attachment.cgi?id=471690
- Try to right click when the transition is running Actual result: no context menu shows. When the view transition is running inside an iframe, the context menu shows, but it shows as if you clicked the parent document. This is likely a hit testing problem.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-06-16 22:19:15 PDT
<
rdar://problem/129976270
>
Tim Nguyen (:ntim)
Comment 2
2024-06-18 16:18:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29956
Tim Nguyen (:ntim)
Comment 3
2024-06-18 16:21:37 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/46823
EWS
Comment 4
2024-06-18 20:06:22 PDT
Committed
280154@main
(a07047cc7bce): <
https://commits.webkit.org/280154@main
> Reviewed commits have been landed. Closing PR #29956 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug