[view-transitions] Fix context menu and hit testing when view transition is running https://bugs.webkit.org/show_bug.cgi?id=275556 rdar://129976270

Reviewed by Matt Woodrow.

The context menu was broken because hit-testing was returning no element.

View transition pseudo-elements should hit-test to their originating element (document element).

Elements that are captured in a view transition should be ignored from hit testing.

* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/hit-test-pseudo-element-element-from-point-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/hit-test-pseudo-element-element-from-point.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/hit-test-unpainted-element-from-point-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/hit-test-unpainted-element-from-point.html:
* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::nodeForHitTest const):
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::hitTestLayer):
* Source/WebCore/rendering/RenderViewTransitionCapture.cpp:
(WebCore::RenderViewTransitionCapture::nodeForHitTest const):
* Source/WebCore/rendering/RenderViewTransitionCapture.h:

Canonical link: https://commits.webkit.org/280154@main